update streamAndFlatMap